--- a/item-eyez/views/organize-view.xaml
+++ b/item-eyez/views/organize-view.xaml
@@ -5,7 +5,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             Width="800" Height="550"
              Background="{DynamicResource OrganizeBackgroundBrush}">
     <UserControl.Resources>
         <LinearGradientBrush x:Key="OrganizeBackgroundBrush" StartPoint="0,0" EndPoint="0,1">
@@ -15,6 +14,10 @@
         <LinearGradientBrush x:Key="NodeBackgroundBrush" StartPoint="0,0" EndPoint="1,0">
             <GradientStop Color="Pink" Offset="0" />
             <GradientStop Color="Teal" Offset="1" />
+        </LinearGradientBrush>
+        <LinearGradientBrush x:Key="TreeBackgroundBrush" StartPoint="0,0" EndPoint="0,1">
+            <GradientStop Color="White" Offset="0" />
+            <GradientStop Color="LightGray" Offset="1" />
         </LinearGradientBrush>
     </UserControl.Resources>
     <UserControl.DataContext>
@@ -30,6 +33,7 @@
                      Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" />
         </GroupBox>
         <TreeView Name="tree" Grid.Row="1" ItemsSource="{Binding Roots}" AllowDrop="True"
+                  Background="{StaticResource TreeBackgroundBrush}"
                   Drop="Tree_Drop" DragOver="Tree_DragOver">
             <TreeView.Resources>
                 <HierarchicalDataTemplate DataType="{x:Type local:HierarchyNode}" ItemsSource="{Binding Children}">
