--- a/item-eyez/views/rooms-view.xaml
+++ b/item-eyez/views/rooms-view.xaml
@@ -16,28 +16,28 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Margin="0,0,0,5">
+        <!-- search box on its own row -->
+        <GroupBox Grid.Row="0" Margin="0,0,0,5" Header="search filter">
+            <TextBox Text="{Binding SearchFilter, UpdateSourceTrigger=PropertyChanged}" />
+        </GroupBox>
+
+        <!-- name/description and add button -->
+        <Grid Grid.Row="1" Margin="0,0,0,5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="3*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <GroupBox Header="search filter" Margin="0,0,5,0">
-                <TextBox Text="{Binding SearchFilter, UpdateSourceTrigger=PropertyChanged}" />
-            </GroupBox>
-            <GroupBox Grid.Column="1" Header="name" Margin="0,0,5,0">
+            <GroupBox Header="name" Margin="0,0,5,0">
                 <TextBox
                     local:EnterKeyBehavior.Command="{Binding AddRoomCommand}"
                     local:FocusBehavior.IsFocused="{Binding NameFocused, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
             </GroupBox>
-            <GroupBox Grid.Column="2" Header="description" Margin="0,0,5,0">
+            <GroupBox Grid.Column="1" Header="description" Margin="0,0,5,0">
                 <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" />
             </GroupBox>
-        </Grid>
-
-        <Grid Grid.Row="1" Margin="0,0,0,5">
-            <Button Width="145" Height="100" Command="{Binding AddRoomCommand}" Content="Add Room" FontSize="25" />
+            <Button Grid.Column="2" Width="120" Height="35" Command="{Binding AddRoomCommand}" Content="Add Room" FontSize="25" />
         </Grid>
 
         <DataGrid Grid.Row="2"
