--- a/item-eyez/views/rooms-view.xaml
+++ b/item-eyez/views/rooms-view.xaml
@@ -37,6 +37,9 @@
             <GroupBox Grid.Column="1" Header="description" Margin="0,0,5,0">
                 <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" />
             </GroupBox>
+                ScrollViewer.VerticalScrollBarVisibility="Auto"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ColumnWidth="*"
             <Button Grid.Column="2" Width="140" Height="100" Command="{Binding AddRoomCommand}" Content="Add Room" FontSize="25" />
         </Grid>
 
