--- a/item-eyez/views/rooms-view.xaml
+++ b/item-eyez/views/rooms-view.xaml
@@ -1,11 +1,10 @@
-﻿<UserControl
-    x:Class="item_eyez.rooms_view"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:item_eyez"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+<UserControl x:Class="item_eyez.rooms_view"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:item_eyez"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d">
     <UserControl.DataContext>
         <local:RoomViewModel />
     </UserControl.DataContext>
@@ -15,13 +14,9 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-
-        <!-- search box on its own row -->
-        <GroupBox Grid.Row="0" Margin="0,0,0,5" Header="search filter">
+        <GroupBox Grid.Row="0" Header="search filter" Margin="0,0,0,5">
             <TextBox Text="{Binding SearchFilter, UpdateSourceTrigger=PropertyChanged}" />
         </GroupBox>
-
-        <!-- name/description and add button -->
         <Grid Grid.Row="1" Margin="0,0,0,5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*" />
@@ -29,52 +24,38 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <GroupBox Header="name" Margin="0,0,5,0">
-                <TextBox
-                    local:EnterKeyBehavior.Command="{Binding AddRoomCommand}"
-                    local:FocusBehavior.IsFocused="{Binding NameFocused, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"
+                         local:EnterKeyBehavior.Command="{Binding AddRoomCommand}"
+                         local:FocusBehavior.IsFocused="{Binding NameFocused, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </GroupBox>
             <GroupBox Grid.Column="1" Header="description" Margin="0,0,5,0">
                 <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" />
             </GroupBox>
-                ScrollViewer.VerticalScrollBarVisibility="Auto"
-                ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                ColumnWidth="*"
-            <Button Grid.Column="2" Width="140" Height="100" Command="{Binding AddRoomCommand}" Content="Add Room" FontSize="25" />
-        </Grid>
-
-        <DataGrid Grid.Row="2"
-                Background="Pink"
-                Name="datagrid"
-                RowBackground="SkyBlue"
-                AlternatingRowBackground="LightBlue"
-                AlternationCount="1"
-                AutoGenerateColumns="False"
-                CanUserDeleteRows="True"
-                CanUserResizeColumns="True"
-                ItemsSource="{Binding Rooms}"
-                SelectedItem="{Binding SelectedRoom}">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Header="Name" />
-                    <DataGridTemplateColumn Header="Description">
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock
-                                    Width="300"
-                                    Text="{Binding Description}"
-                                    TextWrapping="Wrap" />
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                        <DataGridTemplateColumn.CellEditingTemplate>
-                            <DataTemplate>
-                                <TextBox
-                                    Width="300"
-                                    Text="{Binding Description, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
-                                    TextWrapping="Wrap" />
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellEditingTemplate>
-                    </DataGridTemplateColumn>
-                </DataGrid.Columns>
+            <Button Grid.Column="2" Width="120" Height="35" FontSize="25" Content="Add Room" Command="{Binding AddRoomCommand}" />
+        <DataGrid Grid.Row="2" AutoGenerateColumns="False"
+                  CanUserDeleteRows="True"
+                  CanUserResizeColumns="True"
+                  ScrollViewer.VerticalScrollBarVisibility="Auto"
+                  ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                  ColumnWidth="*"
+                  ItemsSource="{Binding Rooms}"
+                  SelectedItem="{Binding SelectedRoom}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+                <DataGridTemplateColumn Header="Description">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Description}" TextWrapping="Wrap" Width="300" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.CellEditingTemplate>
+                        <DataTemplate>
+                            <TextBox Text="{Binding Description, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" Width="300" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellEditingTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
             </DataGrid>
     </Grid>
 </UserControl>
