--- a/item-eyez/views/containers-view.xaml
+++ b/item-eyez/views/containers-view.xaml
@@ -60,18 +60,6 @@
             <GroupBox Grid.Column="1" Header="description" Margin="0,0,5,0">
                 <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" />
             </GroupBox>
-            <DataGrid.RowStyle>
-                <Style TargetType="DataGridRow">
-                    <EventSetter Event="PreviewMouseLeftButtonDown" Handler="DataGridRow_LeftClick" />
-                    <Setter Property="ContextMenu">
-                        <Setter.Value>
-                            <ContextMenu>
-                                <MenuItem Header="Delete" Click="DeleteRow_Click" />
-                            </ContextMenu>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </DataGrid.RowStyle>
             <Button Grid.Column="3" Width="170" Height="100" Command="{Binding AddContainerCommand}" Content="Add Container" FontSize="23" />
         </Grid>
 
@@ -88,7 +76,20 @@
                 CanUserResizeColumns="True"
                 ItemsSource="{Binding Containers}"
                 SelectedItem="{Binding SelectedContainerRow}">
-                <DataGrid.Columns>
+
+            <!--<DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <EventSetter Event="PreviewMouseLeftButtonDown" Handler="DataGridRow_LeftClick" />
+                    <Setter Property="ContextMenu">
+                        <Setter.Value>
+                            <ContextMenu>
+                                <MenuItem Header="Delete" Click="DeleteRow_Click" />
+                            </ContextMenu>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </DataGrid.RowStyle>-->
+            <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding Name}" Header="Name" />
                     <DataGridTemplateColumn Header="Description">
                         <DataGridTemplateColumn.CellTemplate>
