--- a/item-eyez/views/items-view.xaml
+++ b/item-eyez/views/items-view.xaml
@@ -60,18 +60,6 @@
             <GroupBox Grid.Column="2" Header="catagories" Margin="0,0,5,0">
                 <TextBox Text="{Binding Catagories, UpdateSourceTrigger=LostFocus}" TextWrapping="Wrap" />
             </GroupBox>
-            <DataGrid.RowStyle>
-                <Style TargetType="DataGridRow">
-                    <EventSetter Event="PreviewMouseLeftButtonDown" Handler="DataGridRow_LeftClick" />
-                    <Setter Property="ContextMenu">
-                        <Setter.Value>
-                            <ContextMenu>
-                                <MenuItem Header="Delete" Click="DeleteRow_Click" />
-                            </ContextMenu>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </DataGrid.RowStyle>
             <Button Grid.Column="3" Width="120" Height="100" Command="{Binding AddItemCommand}" Content="Add Item" FontSize="25" />
         </Grid>
 
@@ -88,6 +76,39 @@
                 CanUserResizeColumns="True"
                 ItemsSource="{Binding Items}"
                 SelectedItem="{Binding SelectedItem}">
+
+
+            <!--<DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <EventSetter Event="PreviewMouseLeftButtonDown"
+                         Handler="DataGridRow_LeftClick"/>
+
+                    <Setter Property="ContextMenu">
+                        <Setter.Value>
+                            <ContextMenu>
+                                <MenuItem Header="Delete"
+                                  Click="DeleteRow_Click"
+                                  CommandParameter="{Binding}"/>
+                            </ContextMenu>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </DataGrid.RowStyle>--><!--<DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <EventSetter Event="PreviewMouseLeftButtonDown"
+                         Handler="DataGridRow_LeftClick"/>
+
+                    <Setter Property="ContextMenu">
+                        <Setter.Value>
+                            <ContextMenu>
+                                <MenuItem Header="Delete"
+                                  Click="DeleteRow_Click"
+                                  CommandParameter="{Binding}"/>
+                            </ContextMenu>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </DataGrid.RowStyle>-->
             <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding Name, UpdateSourceTrigger=LostFocus}" Header="Name" />
                     <DataGridTemplateColumn Header="Description">
