--- a/item-eyez/views/organize-view.xaml
+++ b/item-eyez/views/organize-view.xaml
@@ -14,6 +14,7 @@
             <GradientStop Color="#20B2AA" Offset="0" />
             <GradientStop Color="#FFDAB9" Offset="1" />
         </LinearGradientBrush>
+        <BooleanToVisibilityConverter x:Key="BoolToVis" />
     </UserControl.Resources>
     <UserControl.DataContext>
         <local:OrganizeViewModel />
@@ -65,6 +66,7 @@
                 </HierarchicalDataTemplate>
                 <Style TargetType="TreeViewItem">
                     <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
+                    <Setter Property="Visibility" Value="{Binding IsVisible, Converter={StaticResource BoolToVis}}" />
                     <EventSetter Event="PreviewMouseRightButtonDown" Handler="TreeViewItem_LeftClick" />
                 </Style>
             </TreeView.Resources>
@@ -103,6 +105,7 @@
                 </HierarchicalDataTemplate>
                 <Style TargetType="TreeViewItem">
                     <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
+                    <Setter Property="Visibility" Value="{Binding IsVisible, Converter={StaticResource BoolToVis}}" />
                     <EventSetter Event="PreviewMouseRightButtonDown" Handler="TreeViewItem_LeftClick" />
                 </Style>
             </TreeView.Resources>
