fixing search header

--- a/item-eyez/views/rooms-view.xaml
+++ b/item-eyez/views/rooms-view.xaml
@@ -17,7 +17,7 @@
         </Grid.RowDefinitions>
 
         <!-- search box on its own row -->
-        <GroupBox>
+        <GroupBox Header="search filter">
             <TextBox Text="{Binding SearchFilter, UpdateSourceTrigger=PropertyChanged}" />
         </GroupBox>
 
