--- a/item-eyez/views/items-view.xaml
+++ b/item-eyez/views/items-view.xaml
@@ -144,7 +144,7 @@
                         <DataTemplate>
                             <ComboBox
                                 DisplayMemberPath="Name"
-                                ItemsSource="{x:Static db:ItemEyezDatabase.Containers}"
+                                ItemsSource="{Binding DataContext.Containers, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
                                 SelectedItem="{Binding ContainedIn, UpdateSourceTrigger=LostFocus, Mode=TwoWay}" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellEditingTemplate>
@@ -160,7 +160,7 @@
                         <DataTemplate>
                             <ComboBox
                                 DisplayMemberPath="Name"
-                                ItemsSource="{x:Static db:ItemEyezDatabase.Rooms}"
+                                ItemsSource="{Binding DataContext.Rooms, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
                                 SelectedItem="{Binding StoredIn, UpdateSourceTrigger=LostFocus, Mode=TwoWay}" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellEditingTemplate>
