--- a/item-eyez/App.xaml
+++ b/item-eyez/App.xaml
@@ -37,6 +37,11 @@
             <GradientStop Offset="1" Color="MediumAquamarine" />
         </LinearGradientBrush>
 
+        <LinearGradientBrush x:Key="ScrollBarThumbBackground" StartPoint="0,0" EndPoint="0,1">
+            <GradientStop Offset="0.0" Color="LightGreen" />
+            <GradientStop Offset="1.0" Color="MediumAquamarine" />
+        </LinearGradientBrush>
+
         <LinearGradientBrush x:Key="GroupBox.Static.Background" StartPoint="0,0" EndPoint="0,1">
             <GradientStop Offset="0.0" Color="Red" />
             <GradientStop Offset="1.0" Color="Orange" />
@@ -902,7 +907,6 @@
             </Setter>
         </Style>
 
-
         <LinearGradientBrush x:Key="Menu.Static.Background">
             <GradientStop Offset="0.0" Color="#db4437" />
             <GradientStop Offset="0.6" Color="LightBlue" />
@@ -1463,6 +1467,169 @@
                     <Setter Property="Template" Value="{DynamicResource {ComponentResourceKey ResourceId=SubmenuHeaderTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}}" />
                 </Trigger>
             </Style.Triggers>
+        </Style>
+
+        <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
+            <Setter Property="MinHeight" Value="20" />
+            <Setter Property="MinWidth" Value="20" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Thumb}">
+                        <Border
+                            Background="{StaticResource ScrollBarThumbBackground}"
+                            BorderBrush="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}"
+                            BorderThickness="1"
+                            CornerRadius="2" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="ScrollBarPageButton" TargetType="{x:Type RepeatButton}">
+            <Setter Property="IsTabStop" Value="false" />
+            <Setter Property="Focusable" Value="false" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type RepeatButton}">
+                        <Border Background="{StaticResource GroupBox.Static.Background}" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <ControlTemplate x:Key="VerticalScrollBar" TargetType="{x:Type ScrollBar}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition MaxHeight="18" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition MaxHeight="18" />
+                </Grid.RowDefinitions>
+                <Border
+                    Grid.RowSpan="3"
+                    Background="{StaticResource GroupBox.Static.Background}"
+                    CornerRadius="2" />
+                <RepeatButton
+                    Grid.Row="0"
+                    Command="ScrollBar.LineUpCommand"
+                    Style="{StaticResource ScrollBarPageButton}">
+                    <Path Data="M 0 4 L 8 4 L 4 0 Z" Fill="{StaticResource Menu.Static.Foreground}" />
+                </RepeatButton>
+                <Track
+                    Grid.Row="1"
+                    IsDirectionReversed="true"
+                    ViewportSize="0">
+                    <Track.DecreaseRepeatButton>
+                        <RepeatButton Command="ScrollBar.PageUpCommand" Style="{StaticResource ScrollBarPageButton}" />
+                    </Track.DecreaseRepeatButton>
+                    <Track.Thumb>
+                        <Thumb Style="{StaticResource ScrollBarThumb}" />
+                    </Track.Thumb>
+                    <Track.IncreaseRepeatButton>
+                        <RepeatButton Command="ScrollBar.PageDownCommand" Style="{StaticResource ScrollBarPageButton}" />
+                    </Track.IncreaseRepeatButton>
+                </Track>
+                <RepeatButton
+                    Grid.Row="2"
+                    Command="ScrollBar.LineDownCommand"
+                    Style="{StaticResource ScrollBarPageButton}">
+                    <Path Data="M 0 0 L 4 4 L 8 0 Z" Fill="{StaticResource Menu.Static.Foreground}" />
+                </RepeatButton>
+            </Grid>
+        </ControlTemplate>
+
+        <ControlTemplate x:Key="HorizontalScrollBar" TargetType="{x:Type ScrollBar}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition MaxWidth="18" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition MaxWidth="18" />
+                </Grid.ColumnDefinitions>
+                <Border
+                    Grid.ColumnSpan="3"
+                    Background="{StaticResource GroupBox.Static.Background}"
+                    CornerRadius="2" />
+                <RepeatButton
+                    Grid.Column="0"
+                    Command="ScrollBar.LineLeftCommand"
+                    Style="{StaticResource ScrollBarPageButton}">
+                    <Path Data="M 4 0 L 4 8 L 0 4 Z" Fill="{StaticResource Menu.Static.Foreground}" />
+                </RepeatButton>
+                <Track Grid.Column="1" ViewportSize="0">
+                    <Track.DecreaseRepeatButton>
+                        <RepeatButton Command="ScrollBar.PageLeftCommand" Style="{StaticResource ScrollBarPageButton}" />
+                    </Track.DecreaseRepeatButton>
+                    <Track.Thumb>
+                        <Thumb Style="{StaticResource ScrollBarThumb}" />
+                    </Track.Thumb>
+                    <Track.IncreaseRepeatButton>
+                        <RepeatButton Command="ScrollBar.PageRightCommand" Style="{StaticResource ScrollBarPageButton}" />
+                    </Track.IncreaseRepeatButton>
+                </Track>
+                <RepeatButton
+                    Grid.Column="2"
+                    Command="ScrollBar.LineRightCommand"
+                    Style="{StaticResource ScrollBarPageButton}">
+                    <Path Data="M 0 0 L 4 4 L 0 8 Z" Fill="{StaticResource Menu.Static.Foreground}" />
+                </RepeatButton>
+            </Grid>
+        </ControlTemplate>
+
+        <Style TargetType="{x:Type ScrollBar}">
+            <Setter Property="Template" Value="{StaticResource VerticalScrollBar}" />
+            <Style.Triggers>
+                <Trigger Property="Orientation" Value="Horizontal">
+                    <Setter Property="Template" Value="{StaticResource HorizontalScrollBar}" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style TargetType="{x:Type ScrollViewer}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ScrollViewer}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+
+                            <ScrollContentPresenter
+                                Grid.Row="0"
+                                Grid.Column="0"
+                                CanContentScroll="{TemplateBinding CanContentScroll}"
+                                CanHorizontallyScroll="False"
+                                CanVerticallyScroll="False"
+                                ContentTemplate="{TemplateBinding ContentTemplate}" />
+
+                            <ScrollBar
+                                x:Name="PART_VerticalScrollBar"
+                                Grid.Row="0"
+                                Grid.Column="1"
+                                AutomationProperties.AutomationId="VerticalScrollBar"
+                                Maximum="{TemplateBinding ScrollableHeight}"
+                                Orientation="Vertical"
+                                ViewportSize="{TemplateBinding ViewportHeight}"
+                                Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"
+                                Value="{TemplateBinding VerticalOffset}" />
+
+                            <ScrollBar
+                                x:Name="PART_HorizontalScrollBar"
+                                Grid.Row="1"
+                                Grid.Column="0"
+                                AutomationProperties.AutomationId="HorizontalScrollBar"
+                                Maximum="{TemplateBinding ScrollableWidth}"
+                                Orientation="Horizontal"
+                                ViewportSize="{TemplateBinding ViewportWidth}"
+                                Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
+                                Value="{TemplateBinding HorizontalOffset}" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
     </Application.Resources>
 </Application>
